hdone/objects/ResponseMapping__mdt.object
<CustomObject>
    <description>Response mappings</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval status. Used mainly for Audit Reports done to indicate if may need to go through QA or not. Combines with approval status on worker in some cases. 1st check at responses.</description>
        <inlineHelpText>Approval status for record based on response</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Awaiting QA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuditReportBonus__c</fullName>
        <description>AuditReportBonus level if any</description>
        <inlineHelpText>AuditReportBonus level if any</inlineHelpText>
        <label>AuditReportBonus</label>
        <referenceTo>AuditReportBonus__mdt</referenceTo>
        <relationshipLabel>ResponseMappings</relationshipLabel>
        <relationshipName>ResponseMappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category response belongs to. Primarily used for reporting.</description>
        <inlineHelpText>Category response belongs to</inlineHelpText>
        <label>Category</label>
        <referenceTo>Category__mdt</referenceTo>
        <relationshipLabel>ResponseMappings</relationshipLabel>
        <relationshipName>ResponseMappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ComparisonValue__c</fullName>
        <description>Assigned value for scoring and comparison of responses</description>
        <inlineHelpText>Comparison value for response</inlineHelpText>
        <label>ComparisonValue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConfirmationDataStatus__c</fullName>
        <description>Used to update ConfirmationData__c.Status field</description>
        <inlineHelpText>ConfirmationData__c.Status field</inlineHelpText>
        <label>ConfirmationDataStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acceptable Response</fullName>
                    <default>true</default>
                    <label>Acceptable Response</label>
                </value>
                <value>
                    <fullName>Complete Response</fullName>
                </value>
                <value>
                    <fullName>Confirmed Correct</fullName>
                </value>
                <value>
                    <fullName>Confirmed Incorrect</fullName>
                </value>
                <value>
                    <fullName>Data Update Required</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Fax Machine</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Incomplete Response</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
                <value>
                    <fullName>Likely Correct</fullName>
                </value>
                <value>
                    <fullName>Likely Incorrect</fullName>
                </value>
                <value>
                    <fullName>Misunderstanding</fullName>
                </value>
                <value>
                    <fullName>New Patients Accepted</fullName>
                </value>
                <value>
                    <fullName>No Feedback Provided</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>No New Patients</fullName>
                </value>
                <value>
                    <fullName>Non-Working</fullName>
                </value>
                <value>
                    <fullName>Out of Compliance</fullName>
                </value>
                <value>
                    <fullName>Phone Address Mismatch</fullName>
                </value>
                <value>
                    <fullName>Practicing</fullName>
                </value>
                <value>
                    <fullName>Record Found</fullName>
                </value>
                <value>
                    <fullName>Record Not Found</fullName>
                </value>
                <value>
                    <fullName>Scheduling Issue</fullName>
                </value>
                <value>
                    <fullName>Technical Problem</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConfirmationStatus__c</fullName>
        <description>Used to update Confirmation__c.Status field</description>
        <inlineHelpText>Confirmation__c.Status field</inlineHelpText>
        <label>ConfirmationStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                    <default>true</default>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Data Update Required</fullName>
                </value>
                <value>
                    <fullName>Emergency Update</fullName>
                </value>
                <value>
                    <fullName>Incomplete Response</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Reconfirm</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>To Schedule</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_ApiName__c</fullName>
        <label>Field ApiName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record is active</description>
        <inlineHelpText>Is record active?</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <description>Processing status of value</description>
        <inlineHelpText>Processing status of value</inlineHelpText>
        <label>Process_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End</fullName>
                    <default>true</default>
                    <label>End</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Object__c</fullName>
        <description>Product and Object record is associated with. As of Summer &apos;17 cannot reliably use EntityDefinition lookup item</description>
        <inlineHelpText>Product and Object record is associated with</inlineHelpText>
        <label>Product Object</label>
        <referenceTo>Product_Object__mdt</referenceTo>
        <relationshipLabel>ResponseMappings</relationshipLabel>
        <relationshipName>ResponseMappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ReportingStatus__c</fullName>
        <description>Used for Confirmation__c.ReportingStatus</description>
        <inlineHelpText>Confirmation__c.ReportingStatus</inlineHelpText>
        <label>ReportingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Display in directory</fullName>
                    <default>true</default>
                    <label>Display in directory</label>
                </value>
                <value>
                    <fullName>In Compliance</fullName>
                </value>
                <value>
                    <fullName>Incomplete Information</fullName>
                </value>
                <value>
                    <fullName>Out of Compliance</fullName>
                </value>
                <value>
                    <fullName>Remove All location for phone immediately</fullName>
                </value>
                <value>
                    <fullName>Remove from directory temporarily</fullName>
                </value>
                <value>
                    <fullName>Remove location immediately</fullName>
                </value>
                <value>
                    <fullName>Remove All location for provider immediately</fullName>
                </value>
                <value>
                    <fullName>Excessive Call Length - Call Ended</fullName>
                </value>
                <value>
                    <fullName>Awaiting Mailing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponseObject__c</fullName>
        <description>Indicates what object response is stored in or linked to</description>
        <inlineHelpText>What object response links to</inlineHelpText>
        <label>ResponseObject</label>
        <referenceTo>Object__mdt</referenceTo>
        <relationshipLabel>ResponseMappings</relationshipLabel>
        <relationshipName>ResponseMappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Response_Option__c</fullName>
        <label>Response Option</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_ReportingStatus__c</fullName>
        <description>Used for Confirmation__c.SubReportinStatus</description>
        <inlineHelpText>Confirmation__c.SubReportinStatus</inlineHelpText>
        <label>Sub_ReportingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address Incorrect</fullName>
                    <default>true</default>
                    <label>Address Incorrect</label>
                </value>
                <value>
                    <fullName>Administrative Only</fullName>
                </value>
                <value>
                    <fullName>Closed Panel</fullName>
                </value>
                <value>
                    <fullName>Confirm Plan Participation</fullName>
                </value>
                <value>
                    <fullName>Died</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Exceeded Call Wait Time</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Feedback Provided</fullName>
                </value>
                <value>
                    <fullName>Incomplete Response</fullName>
                </value>
                <value>
                    <fullName>Location Closed</fullName>
                </value>
                <value>
                    <fullName>No Feedback Provided</fullName>
                </value>
                <value>
                    <fullName>Not Practice Location</fullName>
                </value>
                <value>
                    <fullName>Open Panel</fullName>
                </value>
                <value>
                    <fullName>Out of Order</fullName>
                </value>
                <value>
                    <fullName>Phone Incorrect</fullName>
                </value>
                <value>
                    <fullName>Refers Here Only</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Specialty Incorrect</fullName>
                </value>
                <value>
                    <fullName>Technical Problem</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed Panel</fullName>
                </value>
                <value>
                    <fullName>Under Renovation</fullName>
                </value>
                <value>
                    <fullName>Immediate Training Needed</fullName>
                </value>
                <value>
                    <fullName>Initial Responses Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ResponseMapping</label>
    <pluralLabel>ResponseMappings</pluralLabel>
</CustomObject>